--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Home - Ollieblox</title>
     <link rel="icon" type="x-icon" href="weblogo.png">
     <link rel="shortcut icon" type="x-icon" href="weblogo.png">
-    <link rel="stylesheet" onerror="Roblox.BundleDetector && Roblox.BundleDetector.reportBundleError(this)" data-bundlename="Maincss" data-bundle-source="Main" href="CSS/.css" />
+    <link rel="stylesheet" onerror="Ollieblox.BundleDetector && Ollieblox.BundleDetector.reportBundleError(this)" data-bundlename="Maincss" data-bundle-source="Main" href="CSS/.css" />
     <style>
         .logo {background-image: url(officiallogo.png) ; background-size: 125%;} .profile {background-image: url(); background-size: 100%;}
         #spinner {background: rgb(244, 244, 244) url(loadingforabout.gif) no-repeat center center; background-size: 9%;}
