--- a/pages/develop.html
+++ b/pages/develop.html
@@ -10,7 +10,7 @@
     <style>
         .logo {background-image: url(officiallogo.png); background-size: 125%;}
     </style>
-    <link rel="stylesheet" onerror="Roblox.BundleDetector && Roblox.BundleDetector.reportBundleError(this)" data-bundlename="Maincss" data-bundle-source="Main" href="totallynottg.github.io/Ollieblox/games.css">
+    <link rel="stylesheet" onerror="Roblox.BundleDetector && Roblox.BundleDetector.reportBundleError(this)" data-bundlename="Maincss" data-bundle-source="Main" href="/games.css">
 </head>
 <body>
     <nav>
