--- a/pages/avatar.html
+++ b/pages/avatar.html
@@ -11,7 +11,7 @@
     <style>
         .logo {background-image: url(officiallogo.png) ; background-size: 125%;}
     </style>
-    <link rel="stylesheet" onerror="Roblox.BundleDetector && Roblox.BundleDetector.reportBundleError(this)" data-bundlename="Maincss" data-bundle-source="Main" href="file:///C:/Users/dalen/Documents/Game%20status/PlaidBlox/CSS/games.css">
+    <link rel="stylesheet" onerror="Roblox.BundleDetector && Roblox.BundleDetector.reportBundleError(this)" data-bundlename="Maincss" data-bundle-source="Main" href="/Ollieblox/CSS/games.css">
 </head>
 <body>
     <nav>
