--- a/pages/games.html
+++ b/pages/games.html
@@ -11,7 +11,7 @@
     <style>
         .logo {background-image: url(officiallogo.png) ; background-size: 125%;}
     </style>
-    <link rel="stylesheet" onerror="Roblox.BundleDetector && Roblox.BundleDetector.reportBundleError(this)" data-bundlename="Maincss" data-bundle-source="Main" href="/Ollieblox/games.css" />
+    <link rel="stylesheet" onerror="Roblox.BundleDetector && Roblox.BundleDetector.reportBundleError(this)" data-bundlename="Maincss" data-bundle-source="Main" href="/Ollieblox/CSS/games.css" />
 </head>
 <body>
     <nav>
